feat: add task public id endpoint
