# backend/internal/dto/task_dto.go
@@ -34,6 +34,7 @@ type UpdateTaskStatusRequest struct {
 
 type TaskResponse struct {
 	ID          int64             `json:"id"`
+	PublicID    string            `json:"public_id"`
 	UserID      int64             `json:"user_id"`
 	Title       string            `json:"title"`
 	Description string            `json:"description"`
@@ -64,6 +65,7 @@ func ToTaskResponse(
 
 	return TaskResponse{
 		ID:          t.ID,
+		PublicID:    t.PublicID,
 		UserID:      t.UserID,
 		Title:       t.Title,
 		Description: t.Description,
