# backend/internal/models/models.go
@@ -51,6 +51,7 @@ type User struct {
 
 type Task struct {
 	ID          int64      `json:"id"`
+	PublicID    string     `json:"public_id"`
 	UserID      int64      `json:"user_id"`
 	Title       string     `json:"title"`
 	Description string     `json:"description"`
